// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<styled.span>
  <Titlebar
    className=""
    container="parent"
    key=".0"
    maximized={false}
    onMaximize={null}
    onUnmaximize={null}
    position="top"
    size="md"
  >
    <div />
  </Titlebar>
</styled.span>
`;

exports[`When using snapshots with the maximized prop Should render with an element children 1`] = `
<styled.span>
  <Titlebar
    className=""
    container="parent"
    key=".0"
    maximized={true}
    onMaximize={null}
    onUnmaximize={null}
    position="top"
    size="md"
  >
    <div />
  </Titlebar>
</styled.span>
`;
